add description + alt tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="/css/section10.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <title>Say NO to Fast</title>
+    <meta
+      name="description"
+      content="Say NO to Fast เว็บไซต์ที่จะมาแบ่งปันความรู้เกี่ยวกับฟาสต์แฟชั่นที่เป็นสาเหตุหนึ่งของภาวะโลกร้อย โดยนำเสนอด้วยเทคนิคพารัลแลกซ์สกอริ่งผ่านศิลปะคอลลาจ"
+    />
+    <meta
+      name="keywords"
+      content="Fast fashion, Say no to fast fashion, ฟาสต์แฟชั่น, Parallax, Parallax Scrolling"
+    />
     <link rel="icon" type="image/x-icon" href="img/assets/favicon.png" />
   </head>
 
@@ -36,7 +44,7 @@
     <div class="navbar">
       <div class="nav" id="nav">
         <a href="">
-          <img src="/img/assets/logo.png" />
+          <img src="/img/assets/logo.png" alt="Say NO to Fast Logo" />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
@@ -69,65 +77,68 @@
       <section class="sec-1" id="section1">
         <div class="cover">
           <div class="wrapper_1">
-            <img src="/img/assets/a/a04_box.png" />
+            <img src="/img/assets/a/a04_box.png" alt="cloth shop box" />
           </div>
           <div class="wrapper_2" id="wrapper_2">
-            <img src="/img/assets/a/a03_shirt.png" />
+            <img src="/img/assets/a/a03_shirt.png" alt="shirt" />
           </div>
           <div class="wrapper_3">
-            <img src="/img/assets/a/a02_bowl.png" />
+            <img src="/img/assets/a/a02_bowl.png" alt="hot world bowl" />
           </div>
         </div>
         <div class="title">
           <div class="paper_1" id="paper">
             <div class="braek">
-              <img src="/img/assets/a/a05_braek.png" />
+              <img src="/img/assets/a/a05_braek.png" alt="break" />
             </div>
             <div class="fast_1 fast-text">
-              <img src="/img/assets/a/a05_fast1.png" />
+              <img src="/img/assets/a/a05_fast1.png" alt="F" />
             </div>
             <div class="fast_2 fast-text">
-              <img src="/img/assets/a/a05_fast2.png" />
+              <img src="/img/assets/a/a05_fast2.png" alt="a" />
             </div>
             <div class="fast_3 fast-text">
-              <img src="/img/assets/a/a05_fast3.png" />
+              <img src="/img/assets/a/a05_fast3.png" alt="s" />
             </div>
             <div class="fast_4 fast-text">
-              <img src="/img/assets/a/a05_fast4.png" />
+              <img src="/img/assets/a/a05_fast4.png" alt="t" />
             </div>
-            <img src="/img/assets/a/a04.5_paper1.png" />
+            <img src="/img/assets/a/a04.5_paper1.png" alt="torn paper" />
           </div>
 
           <div class="paper_2">
             <div class="fashion_1 fash-text">
-              <img src="/img/assets/a/a05_fashion1.png" />
+              <img src="/img/assets/a/a05_fashion1.png" alt="F" />
             </div>
             <div class="fashion_2 fash-text">
-              <img src="/img/assets/a/a05_fashion2.png" />
+              <img src="/img/assets/a/a05_fashion2.png" alt="a" />
             </div>
             <div class="fashion_3 fash-text">
-              <img src="/img/assets/a/a05_fashion3.png" />
+              <img src="/img/assets/a/a05_fashion3.png" alt="s" />
             </div>
             <div class="fashion_4 fash-text">
-              <img src="/img/assets/a/a05_fashion4.png" />
+              <img src="/img/assets/a/a05_fashion4.png" alt="h" />
             </div>
             <div class="fashion_5 fash-text">
-              <img src="/img/assets/a/a05_fashion5.png" />
+              <img src="/img/assets/a/a05_fashion5.png" alt="i" />
             </div>
             <div class="fashion_6 fash-text">
-              <img src="/img/assets/a/a05_fashion6.png" />
+              <img src="/img/assets/a/a05_fashion6.png" alt="o" />
             </div>
             <div class="fashion_7 fash-text">
-              <img src="/img/assets/a/a05_fashion7.png" />
+              <img src="/img/assets/a/a05_fashion7.png" alt="n" />
             </div>
             <div class="caption">
-              <img src="/img/assets/a/a05_caption.png" />
+              <img
+                src="/img/assets/a/a05_caption.png"
+                alt="เสื้อมือสอง ครองใจเสมอ"
+              />
             </div>
-            <img src="/img/assets/a/a04.5_paper2.png" />
+            <img src="/img/assets/a/a04.5_paper2.png" alt="torn paper" />
           </div>
 
           <div class="bg">
-            <img src="/img/assets/a/a01_tablecloth.png" />
+            <img src="/img/assets/a/a01_tablecloth.png" alt="tablecloth" />
           </div>
         </div>
       </section>
@@ -135,7 +146,10 @@
       <section class="sec-2" id="section2">
         <h3 class="titleBurrowing">What is</h3>
         <div class="titleBurrowing">
-          <img src="/img/assets/b/b03_fastfashion.png" />
+          <img
+            src="/img/assets/b/b03_fastfashion.png"
+            alt="fast fashion paper cut"
+          />
         </div>
 
         <p class="titleBurrowing">
@@ -146,10 +160,10 @@
           แต่กระนั้นเอง ตลอดทุกขั้นตอนการผลิตได้ส่งผลต่อสิ่งแวดล้อมเป็นวงกว้าง
         </p>
         <div class="bag">
-          <img src="/img/assets/b/b02_bag.png" />
+          <img src="/img/assets/b/b02_bag.png" alt="shopping bag" />
         </div>
         <div class="hanger">
-          <img src="/img/assets/b/b02_hanger.png" />
+          <img src="/img/assets/b/b02_hanger.png" alt="hanger" />
         </div>
         <div class="search">
           <img class="search_icon" src="/img/assets/b/b04_magnifying.png" />
@@ -336,23 +350,23 @@
             <img class="c-img-1" src="/img/assets/d/d01_cloud.png" />
           </div>
           <div class="c_2">
-            <img src="/img/assets/d/d02_cloud.png" />
+            <img src="/img/assets/d/d02_cloud.png" alt="cloud" />
           </div>
           <div class="c_3">
-            <img src="/img/assets/d/d03_cloud.png" />
+            <img src="/img/assets/d/d03_cloud.png" alt="cloud" />
           </div>
           <div class="c_4">
-            <img src="/img/assets/d/d04_cloud.png" />
+            <img src="/img/assets/d/d04_cloud.png" alt="cloud" />
           </div>
           <div class="btf">
-            <img src="/img/assets/d/d05_butterfly.png" />
+            <img src="/img/assets/d/d05_butterfly.png" alt="butterfly/>
           </div>
         </div>
         <div class="sec4_text">
           <p>แล้ว Fast Fashion<br />สร้างผลกระทบอะไรบ้างนะ</p>
         </div>
         <div class="cloud_cover">
-          <img src="/img/assets/e/e01_cloud.png" />
+          <img src="/img/assets/e/e01_cloud.png" alt="big cloud" />
         </div>
       </section>
       <section class="sec-5">
@@ -418,36 +432,51 @@
         </div>
         <div class="sec-6-group">
           <div class="clock-1">
-            <img src="/img/assets/g/g02_clock1.png" />
+            <img src="/img/assets/g/g02_clock1.png" alt="piece of clock" />
           </div>
           <div class="clock-2">
-            <img src="/img/assets/g/g02_clock2.png" />
+            <img src="/img/assets/g/g02_clock2.png" alt="piece of clock" />
           </div>
           <div class="clock-3">
-            <img src="/img/assets/g/g02_clock3.png" />
+            <img src="/img/assets/g/g02_clock3.png" alt="piece of clock" />
           </div>
           <div class="clock-4">
-            <img src="/img/assets/g/g02_clock4.png" />
+            <img src="/img/assets/g/g02_clock4.png" alt="piece of clock" />
           </div>
           <div class="shirt-orange">
-            <img src="/img/assets/g/g03_shirt.png" />
+            <img src="/img/assets/g/g03_shirt.png" alt="orange shirt" />
           </div>
           <div class="g04_woman">
-            <img src="/img/assets/g/g04_woman.png" />
+            <img
+              src="/img/assets/g/g04_woman.png"
+              alt="oppressed women's labor"
+            />
           </div>
           <div class="g05_paper">
-            <img src="/img/assets/g/g05_paper.png" />
+            <img
+              src="/img/assets/g/g05_paper.png"
+              alt="sweatshop word on paper"
+            />
           </div>
         </div>
         <div class="all_woman">
           <div class="woman_red">
-            <img src="/img/assets/g/g06_red.png" />
+            <img
+              src="/img/assets/g/g06_red.png"
+              alt="red oppressed women's labor"
+            />
           </div>
           <div class="woman_original">
-            <img src="/img/assets/g/g04_woman.png" />
+            <img
+              src="/img/assets/g/g04_woman.png"
+              alt="oppressed women's labor"
+            />
           </div>
           <div class="woman_red2">
-            <img src="/img/assets/g/g06_red.png" />
+            <img
+              src="/img/assets/g/g06_red.png"
+              alt="red oppressed women's labor"
+            />
           </div>
           <div class="sec-6-title2">
             <p>ปัญหา</p>
@@ -513,31 +542,34 @@
         <div class="sec-7-container-1">
           <div class="container-1-left">
             <div class="h08_money">
-              <img src="/img/assets/h/h08_money.png" />
+              <img src="/img/assets/h/h08_money.png" alt="burned banknotes" />
             </div>
             <div class="h09_hand">
-              <img src="/img/assets/h/h09_hand.png" />
+              <img
+                src="/img/assets/h/h09_hand.png"
+                alt="hand holding a phone"
+              />
             </div>
             <div class="h12_flash">
-              <img src="/img/assets/h/h12_flash.png" />
+              <img src="/img/assets/h/h12_flash.png" alt="flash" />
             </div>
             <div class="h11_t trend">
-              <img src="/img/assets/h/h11_t.png" />
+              <img src="/img/assets/h/h11_t.png" alt="t letter" />
             </div>
             <div class="h11_r trend">
-              <img src="/img/assets/h/h11_r.png" />
+              <img src="/img/assets/h/h11_r.png" alt="r letter" />
             </div>
             <div class="h11_e trend">
-              <img src="/img/assets/h/h11_e.png" />
+              <img src="/img/assets/h/h11_e.png" alt="e letter" />
             </div>
             <div class="h11_n trend">
-              <img src="/img/assets/h/h11_n.png" />
+              <img src="/img/assets/h/h11_n.png" alt="n letter" />
             </div>
             <div class="h11_d trend">
-              <img src="/img/assets/h/h11_d.png" />
+              <img src="/img/assets/h/h11_d.png" alt="d letter" />
             </div>
             <div class="h10_shirt">
-              <img src="/img/assets/h/h10_shirt.png" />
+              <img src="/img/assets/h/h10_shirt.png" alt="shirt" />
             </div>
           </div>
           <div class="container-1-right">
@@ -575,28 +607,31 @@
           </div>
           <div class="container-2-right">
             <div class="h01_paper">
-              <img src="/img/assets/h/h01_paper.png" />
+              <img src="/img/assets/h/h01_paper.png" alt="torn newspaper" />
             </div>
             <div class="h02_star">
-              <img src="/img/assets/h/h02_star.png" />
+              <img
+                src="/img/assets/h/h02_star.png"
+                alt="yellow multi-pointed star"
+              />
             </div>
             <div class="h03_bin">
-              <img src="/img/assets/h/h03_bin.png" />
+              <img src="/img/assets/h/h03_bin.png" alt="bin" />
             </div>
             <div class="h04_lid">
-              <img src="/img/assets/h/h04_lid.png" />
+              <img src="/img/assets/h/h04_lid.png" alt="lid of bin" />
             </div>
             <div class="h05_shirt1">
-              <img src="/img/assets/h/h05_shirt1.png" />
+              <img src="/img/assets/h/h05_shirt1.png" alt="shirt" />
             </div>
             <div class="h06_shirt2">
-              <img src="/img/assets/h/h06_shirt2.png" />
+              <img src="/img/assets/h/h06_shirt2.png" alt="shirt" />
             </div>
             <div class="h07_old">
-              <img src="/img/assets/h/h07_old.png" />
+              <img src="/img/assets/h/h07_old.png" alt="old tag" />
             </div>
             <div class="h07_cry">
-              <img src="/img/assets/h/h07_cry.png" />
+              <img src="/img/assets/h/h07_cry.png" alt="blue eye crying" />
             </div>
           </div>
         </div>
@@ -605,7 +640,10 @@
         </div>
 
         <div class="h00_scoll">
-          <img src="/img/assets/h/h00_scoll.png" />
+          <img
+            src="/img/assets/h/h00_scoll.png"
+            alt="fast fashion collage banner"
+          />
         </div>
         <div class="slider_container">
           <div class="slide_text">
@@ -624,23 +662,26 @@
             <p>และนี่คือปัญหาที่เกิดจาก</p>
           </div>
           <div class="sec-8-img">
-            <img src="/img/assets/i/i02_fastfashion.png" />
+            <img
+              src="/img/assets/i/i02_fastfashion.png"
+              alt="fast fashion cut paper"
+            />
           </div>
           <div class="i05_hero">
-            <img src="/img/assets/i/i05_hero.png" />
+            <img src="/img/assets/i/i05_hero.png" alt="hero" />
           </div>
           <div class="quote">
             <div class="quote_chat1">
-              <img src="/img/assets/i/i03_chat1.png" />
+              <img src="/img/assets/i/i03_chat1.png" alt="chatbox" />
             </div>
             <div class="quote_chat2">
-              <img src="/img/assets/i/i04_chat2.png" />
+              <img src="/img/assets/i/i04_chat2.png" alt="chatbox" />
             </div>
           </div>
         </div>
 
         <div class="i01_halftone">
-          <img src="/img/assets/i/i01_halftone.png" />
+          <img src="/img/assets/i/i01_halftone.png" alt="halftone" />
         </div>
       </section>
 
@@ -706,13 +747,16 @@
 
       <section class="sec-10">
         <div class="j00_halftone">
-          <img src="/img/assets/j/j00_halftone.png" />
+          <img src="/img/assets/j/j00_halftone.png" alt="halftone" />
         </div>
         <div class="sec-10-title" id="section10">
           <p>ผู้จัดทำ</p>
         </div>
         <div class="member">
-          <img src="/img/assets/k/k01_allcafe.png" />
+          <img
+            src="/img/assets/k/k01_allcafe.png"
+            alt="Picture of the creator"
+          />
         </div>
       </section>
 
