--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <img src="/img/assets/d/d04_cloud.png" alt="cloud" />
           </div>
           <div class="btf">
-            <img src="/img/assets/d/d05_butterfly.png" alt="butterfly/>
+            <img src="/img/assets/d/d05_butterfly.png" alt="butterfly" />
           </div>
         </div>
         <div class="sec4_text">
