--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Say NO to Fast</title>
     <meta
       name="description"
-      content="Say NO to Fast เว็บไซต์ที่จะมาแบ่งปันความรู้เกี่ยวกับฟาสต์แฟชั่นที่เป็นสาเหตุหนึ่งของภาวะโลกร้อย โดยนำเสนอด้วยเทคนิคพารัลแลกซ์สกอริ่งผ่านศิลปะคอลลาจ"
+      content="Say NO to Fast เว็บไซต์ที่จะมาแบ่งปันความรู้เกี่ยวกับฟาสต์แฟชั่นที่เป็นสาเหตุหนึ่งของภาวะโลกร้อน โดยนำเสนอด้วยเทคนิคพารัลแลกซ์สกอริ่งผ่านศิลปะคอลลาจ"
     />
     <meta
       name="keywords"
