add transform sec9 + del tip

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
       </section>
 
       <section class="sec-3">
-        <div class="sec-3-click">
+        <!-- <div class="sec-3-click">
           <p>(click button)</p>
-        </div>
+        </div> -->
         <div class="shirt">
           <div class="shirt-img-1">
             <img class="shirt-1" src="/img/assets/c/c02_jacket.png" />
@@ -693,9 +693,9 @@
           <div class="sec-9-title2">
             <p>การแก้ปัญหา</p>
           </div>
-          <div class="sec-9-hover">
+          <!-- <div class="sec-9-hover">
             <p>(hover card)</p>
-          </div>
+          </div> -->
         </div>
         <div class="sec-9-card1">
           <div class="card-group">
