--- a/index.html
+++ b/index.html
@@ -761,7 +761,20 @@
       </section>
 
       <footer class="footer">
-        <p>Copyright ©2024 Say NO to Fast</p>
+        <div class="desc">
+          <p>
+            เว็บไซต์นี้เป็นส่วนหนึ่งในโครงงานวิจัยของนักศึกษาชั้นปีที่ 4
+            สาขาวิชาคอมพิวเตอร์และเทคโนโลยีสารสนเทศ<br />
+            คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี
+            มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี <br />จัดทำโดย นางสาวปพิชญา
+            กาแดง และนางสาวสาริศา สังกรณี
+          </p>
+        </div>
+        <div class="logofooter">
+          <img src="/img/assets/k/fiet.png" alt="FIET logo" />
+          <img src="/img/assets/k/cit.png" alt="CIT&CMM logo" />
+        </div>
+        <p style="font-size: 1vw">Copyright ©2024 Say NO to Fast</p>
       </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
