fix color navbar

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
     <div class="navbar">
       <div class="nav" id="nav">
         <a href="">
-          <img src="/img/assets/logo.png" alt="Say NO to Fast Logo" />
+          <img
+            src="/img/assets/logo.png"
+            id="logoweb"
+            alt="Say NO to Fast Logo"
+          />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
@@ -176,7 +180,7 @@
         </div> -->
         <div class="shirt">
           <div class="shirt-img-1">
-            <img class="shirt-1" src="/img/assets/c/c02_jacket.png" />
+            <img class="shirt-1" id="hood" src="/img/assets/c/c02_jacket.png" />
           </div>
           <div class="shirt-img-2">
             <img class="shirt-2" src="/img/assets/c/c02_sweater.png" />
@@ -422,7 +426,7 @@
         </div>
 
         <div class="sec-5-div">
-          <img class="sec-5-bg" src="/img/assets/g/bg.png" />
+          <img class="sec-5-bg" id="befsec6" src="/img/assets/g/bg.png" />
         </div>
       </section>
 
@@ -656,7 +660,7 @@
         </div>
       </section>
 
-      <section class="sec-8">
+      <section class="sec-8" id="section8">
         <div class="sec-8-container">
           <div class="sec-8-title">
             <p>และนี่คือปัญหาที่เกิดจาก</p>
