add back to top

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/css/section9.css" />
     <link rel="stylesheet" href="/css/section10.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/backtotop.css" />
+
     <title>Say NO to Fast</title>
     <meta
       name="description"
@@ -73,6 +75,9 @@
           <a href="#section10" class="list">ผู้จัดทำ</a>
         </div>
       </div>
+    </div>
+    <div id="up-to-top">
+      <span><img src="https://i.ibb.co/5krn9rB/arrow-up.png" alt="" /></span>
     </div>
     <div class="wrapweb">
       <div class="progress-container">
@@ -801,5 +806,6 @@
     <script src="/javascript/section8.js"></script>
     <script src="/javascript/section9.js"></script>
     <script src="/javascript/section10.js"></script>
+    <script src="/javascript/backtotop.js"></script>
   </body>
 </html>
